2008-03-18  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/gazpacholoader.py:
	Speculative fix for:
	File kiwi/ui/gazpacholoader.py, line 218, in _editor_edit
	    proxy.set_value(model[active_iter][1])
	TypeError: could not parse subscript as a tree path

=== 1.9.21 ===
2008-03-17 George Y. Kussumoto <george@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* kiwi.spec:
	Release 1.9.21 

2008-03-07  Fabio Morbec  <fabio@async.com.br>
	* Makefile: Correcting the svn address

2008-03-07  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py:
	* kiwi/ui/entrycompletion.py: Handle case when entry completion is poping
	up and the entry loses focus. Fixes bug #3639

2008-03-06  Johan Dahlin  <johan@gnome.org>

	* po/es_CL: Added Spanish/Chilean translation
	(Gabriel Felipe Cornejo Salas)

2008-03-03  Johan Dahlin  <johan@gnome.org>

	* po/es_ES: Added Spanish translation
	(Jose Martin)

2008-02-20  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/listdialog.py: PEP-8ify

2008-02-13  Johan Dahlin  <johan@gnome.org>

	* po/pl.po:
	Update polish translation (Jarek Zgoda)

=== 1.9.20 ===
2008-01-31 Fabio Morbec <fabio@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* kiwi.spec:
	Release 1.9.20

2008-01-17  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/views.py (SignalBroker.on_widget_name__signal_name): 
	After was broken, all signals were connected using after instead of
	on by default. on -> connect, after -> connect_after now, really.
	Based on patch by Arek Korbik

2007-12-04  Johan Dahlin  <johan@gnome.org>

	* AUTHORS (Maintainers): Add Brad.

	* kiwi/ui/delegates.py (ProxySlaveDelegate): Add. Patch by
	Brad Crittenden

2007-11-22  Johan Dahlin  <johan@gnome.org>

	* examples/list/stockicon.py (Fruit.__init__):
	Add an example of this.
